      \code{codes()}, \code{delay()}, \code{format.char()},
      \code{getenv()}, \code{httpclient()}, \code{loadURL()},
      \code{machine()}, \code{parse.dcf()}, \code{printNoClass()},
      \code{provide()}, \code{read.table.url()}, \code{restart()},
      \code{scan.url()}, \code{symbol.C()}, \code{symbol.For()}and
      \code{unix()}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{str(x, width)} now obeys its \code{width}
      argument also for function headers and other objects \code{x}
      where \code{deparse()} is applied.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{parallel::detectCores()} is now able to find the
      number of physical cores (rather than CPUs) on Sparc Solaris.

      It can also do so on recent versions of Windows; however the
      default remains \code{detectCores(logical = TRUE)} on that
      platform.

      \item Reference classes now keep a record of which fields are
      locked.  \code{\$lock()} with no arguments returns the names
      of the locked fields.

      \item \code{HoltWinters()} reports a warning rather than an error
      for some optimization failures (where the answer might be a
      reasonable one).
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item On 64-bit Linux systems, \command{configure} now only sets
      \samp{LIBnn} to \code{lib64} if \file{/usr/lib64} exists.  This
      may obviate setting \samp{LIBnn} explicitly on Debian-derived
      systems.

      It is still necessary to set \samp{LIBnn = lib} (or
      \samp{lib32})for 32-bit builds of \R on a 64-bit OS on those Linux
      distributions capable for supporting that concept.

      \item \command{configure} looks for \file{inconsolata.sty}, and if
      not found adjusts the default \env{R_RD4PDF} to not use it (with a
      warning, since it is needed for high-quality manuals).
    }
  }

  \subsection{BUG FIXES}{