@@ -2459,17 +2459,18 @@ SEXP allocVector(SEXPTYPE type, R_len_t length)
 #endif
 	CHAR_RW(s)[length] = 0;
     }
-    else if (type == REALSXP) {
 #if VALGRIND_LEVEL > 0
+    else if (type == REALSXP)
 	VALGRIND_MAKE_WRITABLE(REAL(s), actual_size);
-#endif
-    }
-    else if (type == INTSXP) {
-#if VALGRIND_LEVEL > 0
+    else if (type == INTSXP)
 	VALGRIND_MAKE_WRITABLE(INTEGER(s), actual_size);
+    else if (type == LGLSXP)
+	VALGRIND_MAKE_WRITABLE(LOGICAL(s), actual_size);
+    else if (type == CPLXSXP)
+	VALGRIND_MAKE_WRITABLE(COMPLEX(s), actual_size);
+    else if (type == RAWSXP)
+	VALGRIND_MAKE_WRITABLE(RAW(s), actual_size);
 #endif
-    }
-    /* <FIXME> why not valgrindify LGLSXP, CPLXSXP and RAWSXP? */
     return s;
 }
 
